--- a/css/input.css
+++ b/css/input.css
@@ -32,6 +32,81 @@ svg {
   }
 }
 
+
+.accordion {
+  @apply overflow-hidden duration-300
+}
+
+.accordion-top {
+  @apply flex justify-between items-center select-none;
+}
+
+.accordion-top h3 {
+  @apply font-interBold;
+}
+
+.accordion-bottom img {
+  @apply inline-block mr-2.5;
+}
+
+.accordion-bottom {
+  @apply invisible opacity-0 max-h-0 duration-300;
+  & > div {
+    @apply flex;
+    & ul > li {
+
+    }
+  }
+}
+.accordion button {
+  @apply duration-300;
+}
+
+.accordion.active .accordion-bottom {
+  @apply max-h-96 opacity-100 visible pt-8;
+}
+.accordion.active-m .accordion-bottom {
+  @apply max-h-[360px] opacity-100 visible;
+}
+.accordion.active-m .accordion-bottom {
+  @apply max-h-[360px] opacity-100 visible;
+}
+
+.accordion.active button {
+  @apply rotate-90;
+}
+.accordion.active-m img {
+  @apply rotate-90;
+}
+
+
+
+
+.muraciet::-webkit-scrollbar,
+.muraciet::-webkit-scrollbar-thumb,
+.muraciet::-webkit-scrollbar-track { 
+    width: 8px;
+    border: none;
+    background: transparent;
+}
+
+.muraciet::-webkit-scrollbar-button,
+.muraciet::-webkit-scrollbar-track-piece,
+.muraciet::-webkit-scrollbar-corner,
+.muraciet::-webkit-resizer {
+    display: none;
+}
+
+.muraciet::-webkit-scrollbar-thumb {
+    background-color: #D4FE2E;
+}
+
+.muraciet::-webkit-scrollbar-track {
+    background-image: url("https://i.imgur.com/GvV1R30.png");
+    background-repeat: repeat-y;
+    background-size: contain;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
