--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,95 @@ svg {
   }
 }
 
+.accordion {
+  overflow: hidden;
+  transition-duration: 300ms;
+}
+
+.accordion-top {
+  display: flex;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.accordion-top h3 {
+  font-family: Inter Bold;
+}
+
+.accordion-bottom img {
+  margin-right: 0.625rem;
+  display: inline-block;
+}
+
+.accordion-bottom {
+  visibility: hidden;
+  max-height: 0px;
+  opacity: 0;
+  transition-duration: 300ms;
+  & > div {
+    display: flex;
+  }
+  & > div {
+    & ul > li {
+    }
+  }
+}
+
+.accordion button {
+  transition-duration: 300ms;
+}
+
+.accordion.active .accordion-bottom {
+  visibility: visible;
+  max-height: 24rem;
+  padding-top: 2rem;
+  opacity: 1;
+}
+
+.accordion.active-m .accordion-bottom {
+  visibility: visible;
+  max-height: 360px;
+  opacity: 1;
+}
+
+.accordion.active button {
+  --tw-rotate: 90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.accordion.active-m img {
+  --tw-rotate: 90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.muraciet::-webkit-scrollbar,
+.muraciet::-webkit-scrollbar-thumb,
+.muraciet::-webkit-scrollbar-track {
+  width: 8px;
+  border: none;
+  background: transparent;
+}
+
+.muraciet::-webkit-scrollbar-button,
+.muraciet::-webkit-scrollbar-track-piece,
+.muraciet::-webkit-scrollbar-corner,
+.muraciet::-webkit-resizer {
+  display: none;
+}
+
+.muraciet::-webkit-scrollbar-thumb {
+  background-color: #D4FE2E;
+}
+
+.muraciet::-webkit-scrollbar-track {
+  background-image: url("https://i.imgur.com/GvV1R30.png");
+  background-repeat: repeat-y;
+  background-size: contain;
+}
+
 /*
 ! tailwindcss v3.3.3 | MIT License | https://tailwindcss.com
 */
@@ -579,6 +668,42 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed {
+  position: fixed;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.right-\[2px\] {
+  right: 2px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.z-1 {
+  z-index: 1;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.order-last {
+  order: 9999;
+}
+
+.m-auto {
+  margin: auto;
+}
+
 .mx-5 {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
@@ -597,6 +722,10 @@ video {
   margin-bottom: 2rem;
 }
 
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
 .mr-\[248px\] {
   margin-right: 248px;
 }
@@ -613,24 +742,162 @@ video {
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
+.hidden {
+  display: none;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-\[100vh\] {
+  height: 100vh;
+}
+
+.h-\[403\.6px\] {
+  height: 403.6px;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.max-h-\[600px\] {
+  max-height: 600px;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-11 {
+  width: 2.75rem;
+}
+
+.w-\[100px\] {
+  width: 100px;
+}
+
+.w-\[100vw\] {
+  width: 100vw;
+}
+
+.w-\[172px\] {
+  width: 172px;
+}
+
+.w-\[192px\] {
+  width: 192px;
+}
+
+.w-\[38px\] {
+  width: 38px;
+}
+
+.w-full {
+  width: 100%;
+}
+
 .max-w-1200 {
   max-width: 1200px;
+}
+
+.max-w-\[1100px\] {
+  max-width: 1100px;
 }
 
 .max-w-\[1200px\] {
   max-width: 1200px;
 }
 
+.max-w-\[168px\] {
+  max-width: 168px;
+}
+
+.max-w-\[407px\] {
+  max-width: 407px;
+}
+
 .max-w-\[480px\] {
   max-width: 480px;
+}
+
+.max-w-\[516px\] {
+  max-width: 516px;
+}
+
+.max-w-\[528px\] {
+  max-width: 528px;
+}
+
+.max-w-\[692px\] {
+  max-width: 692px;
+}
+
+.max-w-\[712px\] {
+  max-width: 712px;
 }
 
 .max-w-\[800px\] {
   max-width: 800px;
 }
 
+.translate-y-0 {
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[60px\] {
+  --tw-translate-y: 60px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.snap-x {
+  scroll-snap-type: x var(--tw-scroll-snap-strictness);
+}
+
+.snap-mandatory {
+  --tw-scroll-snap-strictness: mandatory;
+}
+
 .list-none {
   list-style-type: none;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .justify-between {
@@ -639,6 +906,99 @@ video {
 
 .gap-10 {
   gap: 2.5rem;
+}
+
+.gap-15 {
+  gap: 3.75rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-20 {
+  gap: 5rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.gap-\[157\.62px\] {
+  gap: 157.62px;
+}
+
+.gap-\[15px\] {
+  gap: 15px;
+}
+
+.gap-\[19px\] {
+  gap: 19px;
+}
+
+.gap-\[20px\] {
+  gap: 20px;
+}
+
+.gap-\[22px\] {
+  gap: 22px;
+}
+
+.gap-\[25px\] {
+  gap: 25px;
+}
+
+.gap-\[30px\] {
+  gap: 30px;
+}
+
+.gap-\[41px\] {
+  gap: 41px;
+}
+
+.gap-\[50px\] {
+  gap: 50px;
+}
+
+.gap-\[73px\] {
+  gap: 73px;
+}
+
+.gap-\[77px\] {
+  gap: 77px;
+}
+
+.gap-x-5 {
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
+}
+
+.gap-y-5 {
+  row-gap: 1.25rem;
+}
+
+.gap-y-\[58px\] {
+  row-gap: 58px;
+}
+
+.overflow-auto {
+  overflow: auto;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.rounded-20 {
+  border-radius: 20px;
+}
+
+.rounded-\[14px\] {
+  border-radius: 14px;
+}
+
+.rounded-\[16px\] {
+  border-radius: 16px;
 }
 
 .rounded-\[30px\] {
@@ -653,13 +1013,145 @@ video {
   border-top-left-radius: 1.5rem;
 }
 
+.border-\[1px\] {
+  border-width: 1px;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-y-\[1px\] {
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+}
+
+.border-b-\[1px\] {
+  border-bottom-width: 1px;
+}
+
+.border-l-\[1px\] {
+  border-left-width: 1px;
+}
+
+.border-t-\[1px\] {
+  border-top-width: 1px;
+}
+
+.border-l {
+  border-left-width: 1px;
+}
+
+.border-solid {
+  border-style: solid;
+}
+
+.border-\[\#2A2A2A\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(42 42 42 / var(--tw-border-opacity));
+}
+
+.border-\[\#D4FE2E\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(212 254 46 / var(--tw-border-opacity));
+}
+
+.border-\[\#D8DEE2\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(216 222 226 / var(--tw-border-opacity));
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-red-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(185 28 28 / var(--tw-border-opacity));
+}
+
+.border-l-white {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-l-red-600 {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(220 38 38 / var(--tw-border-opacity));
+}
+
+.bg-\[\#2A2A2A\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(42 42 42 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#D4FE2E\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(212 254 46 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#D8DEE2\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(216 222 226 / var(--tw-bg-opacity));
+}
+
+.bg-\[rgba\(212\2c 254\2c 46\2c \.3\)\] {
+  background-color: rgba(212,254,46,.3);
+}
+
+.bg-\[rgba\(255\2c 255\2c 255\2c \.7\)\] {
+  background-color: rgba(255,255,255,.7);
+}
+
 .bg-lime {
   --tw-bg-opacity: 1;
   background-color: rgb(212 254 46 / var(--tw-bg-opacity));
 }
 
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .bg-\[radial-gradient\(51\.32\%_70\.68\%_at_100\%_50\.06\%\2c _\#D4FE2E_0\%\2c _rgba\(212\2c _254\2c _46\2c _0\.00\)100\.93\%\)\] {
   background-image: radial-gradient(51.32% 70.68% at 100% 50.06%, #D4FE2E 0%, rgba(212, 254, 46, 0.00)100.93%);
+}
+
+.bg-\[url\(\'\/assets\/bg\.png\'\)\] {
+  background-image: url('/assets/bg.png');
+}
+
+.bg-\[url\(\'\/assets\/el\.png\'\)\] {
+  background-image: url('/assets/el.png');
+}
+
+.bg-none {
+  background-image: none;
+}
+
+.bg-cover {
+  background-size: cover;
+}
+
+.bg-\[20\%_50\%\] {
+  background-position: 20% 50%;
+}
+
+.p-\[20px_48px_20px_20px\] {
+  padding: 20px 48px 20px 20px;
+}
+
+.p-\[21px_62px\] {
+  padding: 21px 62px;
+}
+
+.p-\[25px\] {
+  padding: 25px;
+}
+
+.p-\[50px_28px\] {
+  padding: 50px 28px;
 }
 
 .px-10 {
@@ -667,9 +1159,54 @@ video {
   padding-right: 2.5rem;
 }
 
+.px-\[13px\] {
+  padding-left: 13px;
+  padding-right: 13px;
+}
+
+.px-\[25px\] {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.px-\[30px\] {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.px-\[40px\] {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.px-\[44px\] {
+  padding-left: 44px;
+  padding-right: 44px;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.py-15 {
+  padding-top: 3.75rem;
+  padding-bottom: 3.75rem;
+}
+
+.py-25 {
+  padding-top: 6.25rem;
+  padding-bottom: 6.25rem;
+}
+
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-30 {
+  padding-top: 7.5rem;
+  padding-bottom: 7.5rem;
 }
 
 .py-7 {
@@ -677,8 +1214,57 @@ video {
   padding-bottom: 1.75rem;
 }
 
+.py-\[20px\] {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.py-\[21px\] {
+  padding-top: 21px;
+  padding-bottom: 21px;
+}
+
+.py-\[24px\] {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.py-\[7px\] {
+  padding-top: 7px;
+  padding-bottom: 7px;
+}
+
+.py-\[80px\] {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.pb-\[60px\] {
+  padding-bottom: 60px;
+}
+
+.pl-\[10px\] {
+  padding-left: 10px;
+}
+
+.pl-\[30px\] {
+  padding-left: 30px;
+}
+
+.pr-\[44\.5px\] {
+  padding-right: 44.5px;
+}
+
+.pt-25 {
+  padding-top: 6.25rem;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-start {
+  text-align: start;
 }
 
 .font-interBold {
@@ -698,9 +1284,95 @@ video {
   line-height: 1;
 }
 
+.text-\[14px\] {
+  font-size: 14px;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
+}
+
+.text-\[25px\] {
+  font-size: 25px;
+}
+
+.text-\[30px\] {
+  font-size: 30px;
+}
+
+.text-\[35px\] {
+  font-size: 35px;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.font-\[500\] {
+  font-weight: 500;
+}
+
+.font-\[600\] {
+  font-weight: 600;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.font-normal {
+  font-weight: 400;
+}
+
+.leading-4 {
+  line-height: 1rem;
+}
+
+.leading-\[14px\] {
+  line-height: 14px;
+}
+
+.leading-\[20px\] {
+  line-height: 20px;
+}
+
+.leading-\[25px\] {
+  line-height: 25px;
+}
+
+.leading-\[28px\] {
+  line-height: 28px;
+}
+
+.leading-\[35px\] {
+  line-height: 35px;
+}
+
+.leading-\[45px\] {
+  line-height: 45px;
+}
+
+.leading-\[52\%\] {
+  line-height: 52%;
+}
+
+.text-\[\#D4FE2E\] {
+  --tw-text-opacity: 1;
+  color: rgb(212 254 46 / var(--tw-text-opacity));
+}
+
+.text-\[\#D8DEE2\] {
+  --tw-text-opacity: 1;
+  color: rgb(216 222 226 / var(--tw-text-opacity));
+}
+
+.text-\[rgba\(42\2c 42\2c 42\2c 0\.5\)\] {
+  color: rgba(42,42,42,0.5);
 }
 
 .text-black {
@@ -708,6 +1380,197 @@ video {
   color: rgb(42 42 42 / var(--tw-text-opacity));
 }
 
+.underline {
+  text-decoration-line: underline;
+}
+
 .opacity-50 {
   opacity: 0.5;
+}
+
+.opacity-60 {
+  opacity: 0.6;
+}
+
+@media (min-width: 340px) {
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:text-\[35px\] {
+    font-size: 35px;
+  }
+
+  .sm\:leading-\[35px\] {
+    line-height: 35px;
+  }
+}
+
+@media (min-width: 425px) {
+  .xsm\:max-w-\[278px\] {
+    max-width: 278px;
+  }
+
+  .xsm\:flex-row {
+    flex-direction: row;
+  }
+
+  .xsm\:text-\[18px\] {
+    font-size: 18px;
+  }
+
+  .xsm\:leading-\[18px\] {
+    line-height: 18px;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:max-w-\[388px\] {
+    max-width: 388px;
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
+  .md\:flex-col {
+    flex-direction: column;
+  }
+
+  .md\:justify-between {
+    justify-content: space-between;
+  }
+
+  .md\:gap-\[151px\] {
+    gap: 151px;
+  }
+
+  .md\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .md\:px-\[60px\] {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  .md\:px-\[85px\] {
+    padding-left: 85px;
+    padding-right: 85px;
+  }
+
+  .md\:py-10 {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+  }
+
+  .md\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+
+  .md\:text-end {
+    text-align: end;
+  }
+
+  .md\:text-\[20px\] {
+    font-size: 20px;
+  }
+
+  .md\:text-\[30px\] {
+    font-size: 30px;
+  }
+
+  .md\:text-\[35px\] {
+    font-size: 35px;
+  }
+
+  .md\:text-\[50px\] {
+    font-size: 50px;
+  }
+
+  .md\:leading-\[20px\] {
+    line-height: 20px;
+  }
+
+  .md\:leading-\[26px\] {
+    line-height: 26px;
+  }
+
+  .md\:leading-\[30px\] {
+    line-height: 30px;
+  }
+
+  .md\:leading-\[35px\] {
+    line-height: 35px;
+  }
+
+  .md\:leading-\[50px\] {
+    line-height: 50px;
+  }
+
+  .md\:leading-\[80px\] {
+    line-height: 80px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:order-first {
+    order: -9999;
+  }
+
+  .lg\:w-1\/2 {
+    width: 50%;
+  }
+
+  .lg\:max-w-\[443px\] {
+    max-width: 443px;
+  }
+
+  .lg\:translate-y-10 {
+    --tw-translate-y: 2.5rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:gap-0 {
+    gap: 0px;
+  }
+
+  .lg\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .lg\:text-\[50px\] {
+    font-size: 50px;
+  }
+
+  .lg\:leading-\[55px\] {
+    line-height: 55px;
+  }
 }
