--- a/css/style.css
+++ b/css/style.css
@@ -74,14 +74,25 @@ svg {
   & > div {
     display: flex;
   }
-  & > div {
-    & ul > li {
-    }
-  }
 }
 
 .accordion button {
   transition-duration: 300ms;
+}
+
+[data-type="bottom"]::-webkit-scrollbar {
+  display: none;
+}
+
+.shadow-okuCarusel {
+  background: linear-gradient(to left, #fff, transparent);
+  position: absolute;
+  width: 150px;
+  height: 100%;
+}
+
+[data-type="okuCar2"]::-webkit-scrollbar {
+  display: none;
 }
 
 .accordion.active .accordion-bottom {
@@ -107,29 +118,13 @@ svg {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.muraciet::-webkit-scrollbar,
-.muraciet::-webkit-scrollbar-thumb,
-.muraciet::-webkit-scrollbar-track {
-  width: 8px;
-  border: none;
-  background: transparent;
+.card {
+  cursor: pointer;
 }
 
-.muraciet::-webkit-scrollbar-button,
-.muraciet::-webkit-scrollbar-track-piece,
-.muraciet::-webkit-scrollbar-corner,
-.muraciet::-webkit-resizer {
-  display: none;
-}
-
-.muraciet::-webkit-scrollbar-thumb {
-  background-color: #D4FE2E;
-}
-
-.muraciet::-webkit-scrollbar-track {
-  background-image: url("https://i.imgur.com/GvV1R30.png");
-  background-repeat: repeat-y;
-  background-size: contain;
+.accordion-container {
+  height: 380px;
+  overflow-y: auto;
 }
 
 /*
@@ -680,6 +675,22 @@ video {
   position: relative;
 }
 
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.left-1\/2 {
+  left: 50%;
+}
+
+.left-\[25px\] {
+  left: 25px;
+}
+
 .right-\[2px\] {
   right: 2px;
 }
@@ -688,12 +699,24 @@ video {
   top: 0px;
 }
 
+.top-1\/2 {
+  top: 50%;
+}
+
+.top-full {
+  top: 100%;
+}
+
 .z-1 {
   z-index: 1;
 }
 
 .z-10 {
   z-index: 10;
+}
+
+.z-20 {
+  z-index: 20;
 }
 
 .order-last {
@@ -726,16 +749,16 @@ video {
   margin-right: 1.25rem;
 }
 
-.mr-\[248px\] {
-  margin-right: 248px;
-}
-
 .mt-30 {
   margin-top: 7.5rem;
 }
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.box-border {
+  box-sizing: border-box;
 }
 
 .flex {
@@ -750,24 +773,36 @@ video {
   display: none;
 }
 
-.h-5 {
-  height: 1.25rem;
+.h-3 {
+  height: 0.75rem;
 }
 
 .h-\[100vh\] {
   height: 100vh;
 }
 
-.h-\[403\.6px\] {
-  height: 403.6px;
+.h-\[3px\] {
+  height: 3px;
+}
+
+.h-\[404px\] {
+  height: 404px;
+}
+
+.h-\[520px\] {
+  height: 520px;
 }
 
 .h-full {
   height: 100%;
 }
 
-.max-h-\[600px\] {
-  max-height: 600px;
+.h-screen {
+  height: 100vh;
+}
+
+.max-h-\[100px\] {
+  max-height: 100px;
 }
 
 .w-1 {
@@ -834,16 +869,22 @@ video {
   max-width: 528px;
 }
 
-.max-w-\[692px\] {
-  max-width: 692px;
-}
-
 .max-w-\[712px\] {
   max-width: 712px;
 }
 
 .max-w-\[800px\] {
   max-width: 800px;
+}
+
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .translate-y-0 {
@@ -916,16 +957,16 @@ video {
   gap: 0.5rem;
 }
 
-.gap-20 {
-  gap: 5rem;
-}
-
 .gap-5 {
   gap: 1.25rem;
 }
 
-.gap-\[157\.62px\] {
-  gap: 157.62px;
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-\[10px\] {
+  gap: 10px;
 }
 
 .gap-\[15px\] {
@@ -1017,10 +1058,6 @@ video {
   border-width: 1px;
 }
 
-.border {
-  border-width: 1px;
-}
-
 .border-y-\[1px\] {
   border-top-width: 1px;
   border-bottom-width: 1px;
@@ -1030,16 +1067,16 @@ video {
   border-bottom-width: 1px;
 }
 
+.border-l {
+  border-left-width: 1px;
+}
+
 .border-l-\[1px\] {
   border-left-width: 1px;
 }
 
 .border-t-\[1px\] {
   border-top-width: 1px;
-}
-
-.border-l {
-  border-left-width: 1px;
 }
 
 .border-solid {
@@ -1064,21 +1101,6 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-red-700 {
-  --tw-border-opacity: 1;
-  border-color: rgb(185 28 28 / var(--tw-border-opacity));
-}
-
-.border-l-white {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-l-red-600 {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(220 38 38 / var(--tw-border-opacity));
 }
 
 .bg-\[\#2A2A2A\] {
@@ -1122,10 +1144,6 @@ video {
   background-image: url('/assets/bg.png');
 }
 
-.bg-\[url\(\'\/assets\/el\.png\'\)\] {
-  background-image: url('/assets/el.png');
-}
-
 .bg-none {
   background-image: none;
 }
@@ -1134,8 +1152,9 @@ video {
   background-size: cover;
 }
 
-.bg-\[20\%_50\%\] {
-  background-position: 20% 50%;
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .p-\[20px_48px_20px_20px\] {
@@ -1146,10 +1165,6 @@ video {
   padding: 21px 62px;
 }
 
-.p-\[25px\] {
-  padding: 25px;
-}
-
 .p-\[50px_28px\] {
   padding: 50px 28px;
 }
@@ -1157,6 +1172,11 @@ video {
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .px-\[13px\] {
@@ -1239,8 +1259,16 @@ video {
   padding-bottom: 80px;
 }
 
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
 .pb-\[60px\] {
   padding-bottom: 60px;
+}
+
+.pl-1 {
+  padding-left: 0.25rem;
 }
 
 .pl-\[10px\] {
@@ -1251,8 +1279,16 @@ video {
   padding-left: 30px;
 }
 
-.pr-\[44\.5px\] {
-  padding-right: 44.5px;
+.pr-1 {
+  padding-right: 0.25rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
+.pr-\[20px\] {
+  padding-right: 20px;
 }
 
 .pt-25 {
@@ -1272,7 +1308,7 @@ video {
 }
 
 .font-interMedium {
-  font-family: Gotham Medium;
+  font-family: İnter Medium;
 }
 
 .font-interSemibold {
@@ -1290,6 +1326,10 @@ video {
 
 .text-\[20px\] {
   font-size: 20px;
+}
+
+.text-\[24px\] {
+  font-size: 24px;
 }
 
 .text-\[25px\] {
@@ -1335,6 +1375,10 @@ video {
 
 .leading-\[14px\] {
   line-height: 14px;
+}
+
+.leading-\[16px\] {
+  line-height: 16px;
 }
 
 .leading-\[20px\] {
@@ -1392,6 +1436,54 @@ video {
   opacity: 0.6;
 }
 
+.duration-300 {
+  transition-duration: 300ms;
+}
+
+.accordion-container::-webkit-scrollbar-track {
+  background-color: #F5E5AC;
+}
+
+.accordion-container::-webkit-scrollbar-thumb {
+  /* background-color: theme(yellow-500); */
+  width: 4px;
+  height: 68px;
+}
+
+.accordion-container::-webkit-scrollbar {
+  width: 4px;
+}
+
+.muraciet::-webkit-scrollbar,
+.muraciet::-webkit-scrollbar-thumb,
+.muraciet::-webkit-scrollbar-track {
+  width: 8px;
+  border: none;
+  background: transparent;
+}
+
+.muraciet::-webkit-scrollbar-button,
+.muraciet::-webkit-scrollbar-track-piece,
+.muraciet::-webkit-scrollbar-corner,
+.muraciet::-webkit-resizer {
+  display: none;
+}
+
+.muraciet::-webkit-scrollbar-thumb {
+  background-color: #D4FE2E;
+}
+
+.muraciet::-webkit-scrollbar-track {
+  background-image: url("https://i.imgur.com/GvV1R30.png");
+  background-repeat: repeat-y;
+  background-size: contain;
+}
+
+.hover\:bg-lime1:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(190 231 29 / var(--tw-bg-opacity));
+}
+
 @media (min-width: 340px) {
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1413,6 +1505,27 @@ video {
 
   .xsm\:flex-row {
     flex-direction: row;
+  }
+
+  .xsm\:p-\[25px\] {
+    padding: 25px;
+  }
+
+  .xsm\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .xsm\:pr-0 {
+    padding-right: 0px;
+  }
+
+  .xsm\:pr-\[44\.5px\] {
+    padding-right: 44.5px;
+  }
+
+  .xsm\:text-\[16px\] {
+    font-size: 16px;
   }
 
   .xsm\:text-\[18px\] {
@@ -1557,8 +1670,24 @@ video {
     flex-direction: row;
   }
 
+  .lg\:items-start {
+    align-items: flex-start;
+  }
+
   .lg\:gap-0 {
     gap: 0px;
+  }
+
+  .lg\:gap-10 {
+    gap: 2.5rem;
+  }
+
+  .lg\:gap-20 {
+    gap: 5rem;
+  }
+
+  .lg\:gap-\[157\.62px\] {
+    gap: 157.62px;
   }
 
   .lg\:px-0 {
