--- a/css/style.css
+++ b/css/style.css
@@ -723,6 +723,30 @@ video {
   top: 0px;
 }
 
+.bottom-1 {
+  bottom: 0.25rem;
+}
+
+.right-1 {
+  right: 0.25rem;
+}
+
+.left-1 {
+  left: 0.25rem;
+}
+
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
+.left-5 {
+  left: 1.25rem;
+}
+
+.left-10 {
+  left: 2.5rem;
+}
+
 .z-1 {
   z-index: 1;
 }
@@ -1189,6 +1213,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-red-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
+}
+
 .bg-\[radial-gradient\(51\.32\%_70\.68\%_at_100\%_50\.06\%\2c _\#D4FE2E_0\%\2c _rgba\(212\2c _254\2c _46\2c _0\.00\)100\.93\%\)\] {
   background-image: radial-gradient(51.32% 70.68% at 100% 50.06%, #D4FE2E 0%, rgba(212, 254, 46, 0.00)100.93%);
 }
@@ -1210,12 +1239,12 @@ video {
      object-fit: cover;
 }
 
-.p-\[20px_48px_20px_20px\] {
-  padding: 20px 48px 20px 20px;
+.p-\[15px_55px\] {
+  padding: 15px 55px;
 }
 
-.p-\[21px_62px\] {
-  padding: 21px 62px;
+.p-\[20px_48px_20px_20px\] {
+  padding: 20px 48px 20px 20px;
 }
 
 .p-\[50px_28px\] {
@@ -1368,6 +1397,14 @@ video {
 
 .pt-5 {
   padding-top: 1.25rem;
+}
+
+.pr-5 {
+  padding-right: 1.25rem;
+}
+
+.pr-14 {
+  padding-right: 3.5rem;
 }
 
 .text-center {
@@ -1533,6 +1570,10 @@ video {
   transition-duration: 300ms;
 }
 
+.duration-500 {
+  transition-duration: 500ms;
+}
+
 .accordion-container::-webkit-scrollbar-track {
   background-color: #F5E5AC;
 }
@@ -1572,9 +1613,18 @@ video {
   background-size: contain;
 }
 
+.hover\:bg-\[\#D8DEE2\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(216 222 226 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-lime1:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(190 231 29 / var(--tw-bg-opacity));
+}
+
+.hover\:opacity-100:hover {
+  opacity: 1;
 }
 
 @media (min-width: 340px) {
@@ -1657,6 +1707,14 @@ video {
 
   .md\:flex-col {
     flex-direction: column;
+  }
+
+  .md\:flex-nowrap {
+    flex-wrap: nowrap;
+  }
+
+  .md\:justify-normal {
+    justify-content: normal;
   }
 
   .md\:justify-between {
